--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "transaction-app-angular",
   "version": "0.0.0",
+  "homepage": "https://markoviv.github.io/list-page-angular/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +21,9 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "gh-pages": "^4.0.0",
+    "install": "^0.13.0",
+    "npm": "^9.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
